# Industrial-Embedded-Dev-Agent

./: .gitattributes  .gitignore  CONTRIBUTING.md  Industrial Embedded Dev Agent_项目方案.md  Industrial Embedded Dev Agent_项目评估.txt  LICENSE  README.md  pyproject.toml  仓库整理说明.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  full-check.yml  quick-check.yml
.planning/: GSD_BOUNDARY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/phase-1-search-first-index/: PLAN.md
.planning/phases/phase-2-curated-memory/: PLAN.md
.planning/phases/phase-3-safe-tool-wrapper/: PLAN.md
.planning/phases/phase-4-coding-cli-wrapper/: PLAN.md
.planning/phases/phase-5-automation-readiness/: PLAN.md
.planning/phases/phase-6-board-only-read-diagnostics/: PLAN.md
.planning/phases/phase-7-later-runtime-replacement/: PLAN.md
data/: README.md
data/benchmark/: README.md  benchmark_v1.jsonl  knowledge_qa_v1.jsonl  log_attribution_v1.jsonl  offline_regression_2026_04_28.jsonl  tool_safety_v1.jsonl
data/chunks/: README.md  doc_chunks_v1.jsonl
data/examples/stub_bench_packs/: README.md  offline_regression_guide.md  sample_axis1_fault.json  sample_compare_matrix.md  sample_encoder_stall.json  sample_nominal.json  sample_open_rpmsg_fail.json
data/materials/: README.md  current_ethercat_dynamic_profile_project_v1.md  ethercat_dynamic_profile_doc_timeline_2026_04_28.md  legacy_canopen_rpmsg_lessons_2026_04_28.md  legacy_materials_ingestion_policy_2026_04_28.md  material_index_v1.md  offline_acceptance_evidence_2026_04_28.md  offline_regression_baseline_2026_04_28.md  soem_trace_regression_2026_04_28.md  stub_scenario_cases_v1.md  test_double_verification_layers_2026_04_29.md
data/pending/: README.md
data/taxonomy/: README.md  labels_v1.md
docs/: Spindle工业嵌入式Agent使用手册_2026-04-28.docx  candidate_quality_check_plan.md  current_ethercat_agent_development_guide.md  demo_offline_acceptance_qa.md  formal_merge_quickstart.md  formal_merge_workflow.md  frozen_baseline_2026_04_28.md  manual_canonical_merge_guide.md  mvp_architecture.md  real_bench_first_day_plan.md  real_bench_first_run_template.md  real_bench_issue_capture_template.md  real_bench_quickstart.md  real_bench_readiness_checklist.md  real_bench_session_review_template.md  real_bench_to_formal_merge_map.md  roadmap.md  spindle_user_manual.md  worklog_2026-04-04.md  worklog_2026-04-05.md  worklog_2026-04-06.md  wsl_stub_mode.md
scripts/: build_spindle_manual_docx.py  setup_wsl_stub.ps1  split_benchmark.ps1
scripts/wsl/: librobot_stub_runtime.py  run_with_stub.py
src/industrial_embedded_dev_agent/: __init__.py  analysis.py  bench_pack_render.py  benchmarks.py  board_diagnostics.py  chunking.py  cli.py  config.py  datasets.py  engineering.py  material_workspace.py  models.py  rag.py  retrieval.py  runner.py  taxonomy.py  tools.py
tests/: test_bench_pack_render.py  test_board_diagnostics.py  test_engineering_tools.py  test_project_baseline.py
准备产物/: README.md  benchmark_v1.jsonl  标签体系_v1.md  真实材料整理.md
资料/2-技术服务/: 3-Tronlong产品返修单.docx
资料/TLIMX8MP-EVM 评估板学习过程/: 3月学习过程.docx  TLIMX8MP-EVM_3月学习总结.docx
资料/imxSoem-motion-control/: tmp_axis1_delay_probe.py  tmp_axis_command_and_probe.py  tmp_axis_probe.py  tmp_probe_can_heartbeat.py  tmp_verify_acc_dec.py
资料/imxSoem-motion-control/imxSoem-motion-control/: make_mix_protocol_note_docx.ps1  make_worklog_docx.ps1  readme.docx  update_readme_docx.ps1  worklog_2026-03-31.docx  worklog_2026-04-01.docx  worklog_2026-04-03.docx
资料/imxSoem-motion-control/imxSoem-motion-control/imxSoem-motion-control/Tpr20Library/: CMakeLists.txt  libtpr20pro.cpp
资料/imxSoem-motion-control/imxSoem-motion-control/imxSoem-motion-control/Tpr20Library/include/: coordinatetrans.h  libcrobot.h  libmanager.h
资料/imxSoem-motion-control/imxSoem-motion-control/imxSoem-motion-control/Tpr20Library/src/: coordinatetrans.cpp  libcrobot.cpp  libmanager.cpp
资料/imxSoem-motion-control/imxSoem-motion-control/imxSoem-motion-control/mix_protocol/armgcc/: CMakeLists.txt  CMakePresets.json  build_and_deploy_ddr_release.bat  build_ddr_release.bat  build_ddr_release.sh  build_deploy_monitor_ddr_release.bat  build_deploy_monitor_ddr_release.ps1  build_deploy_run_robot_monitor_ddr_release.bat  build_deploy_run_robot_monitor_ddr_release.ps1  build_deploy_verify_robot_no_serial.ps1  config.cmake  deploy_ddr_release.bat  deploy_robot_runtime.bat  flags.cmake  main_robot_test.py  mcux_include.json  probe_existing_rpmsg.py  robot-runner.service  robot_open_probe.py  robot_remote_probe.py  rpmsg_open_probe.py  rpmsg_open_probe_nonblock.py  run_robot_debug.sh  run_robot_remote.sh  verify_robot_motion.py  wsl_build_common.sh  一键编译部署运行机器人并监听COM3.bat  一键编译部署重启并无串口验证机器人.bat
资料/imxSoem-motion-control/tmp_motion_lib_upload/: error.h  global.h  motion_control_lib.cpp  motion_control_lib.h  motion_control_lib_global.h
资料/imxSoem-motion-control/tmp_worklog_2026_04_01/docProps/: app.xml
资料/imxSoem-motion-control/tmp_worklog_2026_04_01/word/: document.xml  settings.xml
资料/imxSoem-motion-control/tmp_worklog_2026_04_03/word/: document.xml
资料/imxSoem-motion-control/tmp_worklog_2026_04_03_check/docProps/: core.xml
资料/imxSoem-motion-control/tmp_worklog_2026_04_03_check/word/: fontTable.xml
(+112 files in other folders)
