[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-embedded-dev-agent"
version = "0.1.0"
description = "MVP skeleton for an industrial embedded development assistant."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "C6TNT" }
]
dependencies = []

[project.scripts]
ieda = "industrial_embedded_dev_agent.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
