[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spindle-agent"
version = "0.1.0"
description = "Search-first industrial engineering agent wrapper for EtherCAT, robot, servo, and embedded debugging work."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "C6TNT" }
]
dependencies = [
  "python-docx>=1.2.0",
  "pypdf>=6.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
spindle = "industrial_embedded_dev_agent.cli:main"
ieda = "industrial_embedded_dev_agent.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
